--- a/natureza.html
+++ b/natureza.html
@@ -30,7 +30,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="videos.html">Vídeos</a>
+              <a class="nav-link" href="canal.html">Canais</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="artigos.html">Artigos científicos</a>
