--- a/artigos.html
+++ b/artigos.html
@@ -12,8 +12,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">VIVERDE</a>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark style="background-color: #000000;"">
+                <a class="navbar-brand" href="artigos.html">VIVERDE</a>
+
         <button
           class="navbar-toggler"
           type="button"
@@ -23,12 +24,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"
-                >Início <span class="sr-only">(current)</span></a
-              >
-            </li>
+                    <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="canal.html">Canais</a>
             </li>
@@ -47,6 +43,10 @@
     </header>
 
     <main class="container">
+              <div class="container">
+          <h2 class="display-4">Artigos e materiais</h2>
+          <!-- <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p> -->
+        </div>
       <div class="card-columns">
         <div class="card__artigo card text-center">
           <div class="card-body">
@@ -249,9 +249,6 @@
       </div>
     </main>
 
-    <footer>
-      RODAPÉ
-    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
