--- a/videos.html
+++ b/videos.html
@@ -12,8 +12,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">VIVERDE</a>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark style="background-color: #000000;"">
+                <a class="navbar-brand" href="artigos.html">VIVERDE</a>
+
         <button
           class="navbar-toggler"
           type="button"
@@ -23,12 +24,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"
-                >Início <span class="sr-only">(current)</span></a
-              >
-            </li>
+                    <ul class="navbar-nav ml-auto">
+
             <li class="nav-item">
               <a class="nav-link" href="videos.html">Vídeos</a>
             </li>
